--- a/08-spring-boot-spring-mvc-secutiry/01-spring-boot-spring-mvc-secutiry-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-secutiry/01-spring-boot-spring-mvc-secutiry-default/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thmeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+                xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>luv2code Company Home Page</title>
@@ -11,6 +12,36 @@
     <p>
         Welcome to the luv2code company home page!
     </p>
+
+    <hr>
+
+    <!-- display user name and role   -->
+   <p>
+       User: <span sec:authentication="principal.username"></span>
+       <br><br>
+       Role(s): <span sec:authentication="principal.authorities"></span>
+   </p>
+
+    <div sec:authorize="hasRole('MANAGER')">
+
+        <!-- Add a link to point to /leaders ...this is for the managers   -->
+        <p>
+            <a th:href="@{/leaders}">Leadership Meeting</a>
+            (Only for Manager peeps)
+        </p>
+    </div>
+
+    <div sec:authorize="hasRole('ADMIN')">
+
+        <!-- Add a link to point to /systems ... this is for the admins -->
+        <p>
+            <a th:href="@{/systems}">IT Systems Meeting</a>
+            (Only for Admin peeps)
+        </p>
+    </div>
+
+
+    <hr>
 
 
     <!-- Add a logout button -->
